--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ highlighter: rouge
 logo: false
 paginate: 15
 excerpt_separator: "<!--more-->"
-baseurl: /
+baseurl: /cocoagrinder
 gems: [jekyll-paginate]
 
 # Details for the RSS feed generator
